# distrox

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  default.nix  index.html  main.js  main_module.js  package.json  preload.js  shell.nix
lib/distrox-types/: Cargo.toml
lib/distrox-types/src/: lib.rs
src/: lib.rs  main.rs
src/gui/: constants.rs  debug.rs  main_menu.rs  main_window.rs  mod.rs
src/repository/: profile.rs
static/: gui.glade
