[package]
name          = "distrox"
version       = "0.1.0"
authors       = ["Matthias Beyer <mail@beyermatthias.de>"]

description   = "Distributed network build on IPFS"

keywords      = ["social", "network", "ipfs", "distributed"]
readme        = "README.md"
license       = "GPL-2.0"

documentation = "https://docs.rs/distrox"
repository    = "https://github.com/matthiasbeyer/distrox"
homepage      = "http://github.com/matthiasbeyer/distrox"

edition       = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
is-match     = "0.1"
failure      = "0.1"
serde        = "1"
serde_derive = "1"
serde_json   = "1"
mime         = "0.3"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "0.7", features = ["serde", "v4"] }
log          = "0.4"
env_logger   = "0.5"
config       = "0.9"
toml         = "0.4"
itertools    = "0.7"
wasm-bindgen = "0.2.45" # same version wasm-bindgen-cli has to be installed

[dependencies.web-sys]
version = "0.3.19"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
