[package]
name = "distrox-types"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description   = "Distributed network build on IPFS - types library"

keywords      = ["social", "network", "ipfs", "distributed"]
readme        = "README.md"
license       = "GPL-2.0"

documentation = "https://docs.rs/distrox"
repository    = "https://github.com/matthiasbeyer/distrox"
homepage      = "http://github.com/matthiasbeyer/distrox"

edition       = "2018"

[dependencies]
serde        = "1"
serde_derive = "1"
serde_json   = "1"
mime         = "0.3"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "0.7", features = ["serde", "v4"] }
